[package]
name = "repotricks"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "A CLI tool to analyze code repositories"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ignore = "0.4"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
